[package]
name = "pnvm"
version = "0.1.0"
authors = ["Ricky Chen Xu <xuchen@u.nus.edu>"]

[dependencies]
pnvm_lib = {path = "../pnvm_lib"}
pnvm_sys = {path = "../pnvm_sys", optional=true}
log = "0.4"
env_logger = "0.4"
rand = "0.5"
config = "0.9"
zipf = "4.0.0"
num = "0.2"

flame = { version = "0.2.2", optional = true }
parking_lot = {version = "0.6", features = ["nightly"]}

[features]
profile = ["pnvm_lib/profile", "flame"]
unstable = ["pnvm_lib/unstable"]
pmem = ["pnvm_lib/pmem", "pnvm_sys"]
