[package]
name = "pnvm_lib"
version = "0.1.0"
authors = ["Ricky Chen Xu <xuchen@u.nus.edu>"]

[dependencies]
pnvm_sys = { path = "../pnvm_sys"}
log = {version = "0.4"}
env_logger = "0.4"
lazy_static = "1.0"
libc = "0.2"
crossbeam = "0.3.0"
parking_lot = {version = "0.6", features = ["nightly"]}
evmap = "4.0.0"

flame = {version = "0.2.2", optional = true}
flamer = {version = "^0.2.3", optional = true}


[features]
profile = ["pnvm_sys/profile", "flamer", "flame"]
unstable = ["pnvm_sys/unstable"]
pmem = []
